# study_ood_course_work

./: .gitignore  CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt  main.cpp  pch.h
src/app/: Application.cpp  Application.h  Application_fwd.h  defenitions.h
src/app/edit/: IUndoableEdit.h  IUndoableEdit_fwd.h
src/app/edit/CEdit/: AbstractUndoableEdit.cpp  AbstractUndoableEdit.h
src/app/edit/CEdit/compound/: IUndoableCompoundEdit.h  IUndoableCompoundEdit_fwd.h
src/app/edit/CEdit/compound/CUndoableCompoundEdit/: CompoundEdit.cpp  CompoundEdit.h
src/app/edit/manager/: UndoManager.cpp  UndoManager.h
src/app/model/draft/: AppModelPositionablesDraft.cpp  AppModelPositionablesDraft.h  AppModelPositionablesDraft_fwd.h
src/app/model/draft_editor/: AppModelDraft.cpp  AppModelDraft.h
src/app/model/positionable/: AppModelPositionable.cpp  AppModelPositionable.h
src/app/model/positionable/shape/: AppModelShape.cpp  AppModelShape.h
src/app/presenter/: IDocument.h  IDocument_fwd.h  IPositionablesDraftPresenter.h  IPositionablesDraftPresenter_fwd.h
src/app/presenter/draft/: DraftPresenter.cpp  DraftPresenter.h
src/app/presenter/draft_editor/: DraftPresenter.cpp  DraftPresenter.h
src/app/window/: IWindow.h  IWindow_fwd.h  Layout.cpp  Layout.h
src/app/window/CWindow/: BaseWindow.cpp  BaseWindow.h
src/app/window/CWindow/draft_editor/event/: WindowDraftEditorEvent.h  WindowDraftEditorEventTypes.h
src/app/window/CWindow/draft_editor/imgui/: WDraftEditorImGui.cpp  WDraftEditorImGui.h
src/app/window/CWindow/imgui/: WindowImGui.cpp  WindowImGui.h
src/app/window/CWindow/imgui/backends/: ImGuiBackends.cpp  ImGuiBackends.h
src/app/window/CWindow/main/imgui/: WMainImGui.cpp  WMainImGui.h
src/app/window/event/: WindowEvent.h  WindowEventTypes.h
src/app/window/manager/: IWindowManager.h  IWindowManager_fwd.h
src/app/window/manager/CWindowManager/imgui/: WindowManagerImGui.cpp  WindowManagerImGui.h
src/illusio/: pch_illusio.cpp  pch_illusio.h
src/illusio/canvas/: ICanvas.h  ICanvas_fwd.h
src/illusio/canvas/CCanvas/imgui/: CanvasImGui.cpp  CanvasImGui.h
src/illusio/common/signals/: signal.hpp
src/illusio/common/uuid/: Uuid.cpp  Uuid.h  uuid.hpp
src/illusio/domain/common/: domain_common.h
src/illusio/domain/common/color/: RGBAColor.h
src/illusio/domain/common/frame/: Frame.cpp  Frame.h
src/illusio/domain/common/frame/CFrame/: FrameD.h
src/illusio/domain/common/point/: Point.cpp  Point.h
src/illusio/domain/common/point/CPoint/: PointD.h
src/illusio/domain/common/size/: Size.cpp  Size.h
src/illusio/domain/common/size/CSize/: SizeD.h
src/illusio/domain/common/style/: IStyle.h  IStyle_fwd.h
src/illusio/domain/common/style/CStyle/: Style.cpp  Style.h  StyleComposite.cpp  StyleComposite.h
src/illusio/domain/draft/: IPositionableDraft.h  IPositionableDraft_fwd.h
src/illusio/domain/draft/CPositionableDraft/: PositionableDraft.cpp  PositionableDraft.h
src/illusio/domain/object/: IObject.h  IObject_fwd.h  ObjectImpl.hpp
src/illusio/domain/object/positionable/: IPositionable.h  IPositionable_fwd.h  IPositionables.h  IPositionables_fwd.h  PositionableImpl.hpp
src/illusio/domain/object/positionable/event/: DomainPositionableModelEvent.h  DomainPositionableModelEventTypes.h
src/illusio/domain/object/positionable/group/: IPositionableGroup.h  IPositionableGroup_fwd.h
src/illusio/domain/object/positionable/group/CPositionableGroup/: PositionableDraft.cpp  PositionableDraft.h  PositionableGroup.hpp  PositionablesDraft.cpp  PositionablesDraft.h
src/illusio/domain/object/positionable/shape/: IShape.h  IShape_fwd.h  IShapes.h  IShapes_fwd.h  ShapeTypes.h
src/illusio/domain/object/positionable/shape/group/: IShapeGroup_fwd.h
src/illusio/domain/object/positionable/shape/group/CShapeGroup/: ShapeGroup.hpp  ShapesDraft.cpp  ShapesDraft.h
src/illusio/domain/object/positionable/shape/simple/: ShapeImpl.hpp
src/illusio/domain/object/positionable/shape/solid/: IShapeSolid_fwd.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/: ShapeSolidImpl.hpp
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/ellipse/: IEllipse.h  IEllipse_fwd.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/ellipse/CEllipse/: Ellipse.cpp  Ellipse.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/rectangle/: IRectangle.h  IRectangle_fwd.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/rectangle/CRectangle/: Rectangle.cpp  Rectangle.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/triangle/: ITriangle.h
src/illusio/domain/object/positionable/shape/solid/CShapeSolid/triangle/CTriangle/: Triangle.cpp  Triangle.h
src/illusio/domain/shape/: IShape.h  IShape_fwd.h  IShapes.h  IShapes_fwd.h
src/illusio/domain/shape/group/: IShapeGroup.h  IShapeGroup_fwd.h
src/illusio/domain/shape/group/CShapeGroup/: ShapeGroup.cpp  ShapeGroup.h  ShapesDraft.cpp  ShapesDraft.h
src/illusio/domain/shape/simple/: ShapeImpl.cpp  ShapeImpl.h
src/illusio/domain/shape/solid/: IShapeSolid.h
src/illusio/domain/shape/solid/CShapeSolid/: ShapeSolidImpl.h
src/illusio/domain/shape/solid/CShapeSolid/ellipse/: Ellipse.cpp
src/illusio/domain/shape/solid/CShapeSolid/rectangle/: Rectangle.cpp
src/illusio/domain/shape/solid/CShapeSolid/rectangle/CRectangle/: Rectangle.h
src/illusio/domain/shape/solid/CShapeSolid/triangle/: ITriangle_fwd.h  Triangle.cpp
src/illusio/domain/shape/solid/CShapeSolid/triangle/CTriangle/: Triangle.h
tests/: CMakeLists.txt
tests/unit/: test.unit.cpp
